manifest/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-api-virtualservice
spec:
  hosts:
  - "api.cluster-sample.com"
  gateways:
  - api-gateway
  http:
  - match:
    - uri:
        prefix: /sample-api/
    rewrite:
      uri: /
    route:
    - destination:
        host: sample-api-service
        port:
          number: 3000
