manifest/authorization-policy.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authentication-policy-api
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: istio-ingressgateway
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals: ["*"]
